--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -102,7 +102,7 @@
         </nav>
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
-            {{ template "content" }}
+            {{ template "content" . }}
 
             <footer>
                 <span class="float-right text-muted">
