Fixing the pipeline

--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -1,5 +1,5 @@
 {{- /*gotype: mlp/catalog/web.Site*/ -}}
-{{ define "layout" }}
+{{- define "layout" -}}
 <!doctype html>
 <html lang="en">
 <head>
@@ -47,6 +47,7 @@
 
     <ul class="navbar-nav px-3">
         <li class="nav-item text-nowrap">
+
         </li>
     </ul>
 </nav>
