--- a/server/web/explore_datasets/content.html
+++ b/server/web/explore_datasets/content.html
@@ -1,4 +1,4 @@
-{{- /*gotype: mlp/catalog/web.ExploreDatasetsModel*/ -}}
+{{- /*gotype: mlp/catalog/web.Model*/ -}}
 {{ define "content" }}
     <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
         <h1 class="h2">Explore Datasets</h1>
