--- a/server/web/view_project/content.html
+++ b/server/web/view_project/content.html
@@ -44,7 +44,7 @@
     <span class="zip-size">{{ $.Site.Fmt.BytesDecimal .Item.StorageBytes}}</span>
     {{if .Item.LocationId}}<span class="text-muted">at <span class="location-id">{{.Item.LocationId}}</span></span>{{end}}
     </td>
-    <td class="update-timestamp">{{$.Site.Fmt.Timestamp .Item.UpdateTimestamp}}</td>
+    <td class="update-timestamp">{{if .Item.UpdateTimestamp}}{{$.Site.Fmt.Timestamp .Item.UpdateTimestamp}}{{end}}</td>
 
 
     </tr>
