Fixing a few deployment issues

--- a/server/web/list_projects/content.html
+++ b/server/web/list_projects/content.html
@@ -1,4 +1,4 @@
-{{- /*gotype: mlp/catalog/web.Model*/ -}}
+{{- /*gotype: mlp/catalog/web/list_projects.Model*/ -}}
 {{ define "content" }}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
     <h1 class="h2">Projects</h1>
