--- a/server/web/list_projects/content.html
+++ b/server/web/list_projects/content.html
@@ -27,7 +27,7 @@
             <td class="dataset-count">{{ .DatasetCount }}</td>
             <td class="job-count">{{ .JobCount }}</td>
 
-            <td>{{ .StorageBytes }}</td>
+            <td>{{ $.Site.Fmt.BytesDecimal .StorageBytes }}</td>
         </tr>
         {{end}}
         </tbody>
