--- a/server/web/view_dataset/content.html
+++ b/server/web/view_dataset/content.html
@@ -6,7 +6,7 @@
 <nav aria-label="breadcrumb">
   <ol class="breadcrumb  rounded-bottom" style="border-top-left-radius: 0; border-top-right-radius: 0;">
     <li class="breadcrumb-item"><a href="{{.Site.Url.ListProjects}}">Projects</a></li>
-    <li class="breadcrumb-item"><a href="{{.Site.Url.ViewProject .Dataset.ProjectId}}" class="project-link">{{ .Project.Name }}</a></li>
+    <li class="breadcrumb-item"><a href="{{.Site.Url.ViewProject .Project.Name}}" class="project-link">{{ .Project.Name }}</a></li>
     <li class="breadcrumb-item active" aria-current="page">{{ .Dataset.Name }}</li>
   </ol>
 </nav>
@@ -19,7 +19,7 @@
         </h2>
     </div>
 
-    <div class="container" id="ds-{{.Dataset.DatasetId}}">
+    <div class="container" id="ds-{{.Site.Fmt.Uid .Dataset.Uid}}">
         <div class="row rounded border px-4 py-3" >
             <div class="col">
 
