--- a/server/web/view_project/content.html
+++ b/server/web/view_project/content.html
@@ -33,9 +33,9 @@
 
 
 
-    <tr class="dataset-info" id="ds-{{ .Item.DatasetId }}">
+    <tr class="dataset-info" id="ds-{{ $.Site.Fmt.Uid .Item.Uid }}">
     <td>
-        <a href="{{$.Site.Url.ViewDataset .Item.DatasetId}}" class="dataset-link">{{.Item.Name}}</a>
+        <a href="{{$.Site.Url.ViewDataset .Item.ProjectName .Item.Name}}" class="dataset-link">{{.Item.Name}}</a>
         {{if .IsStale}} <span class="stale-status badge badge-warning">stale</span>{{end}}
 
     </td>
