--- a/server/web/list_projects/content.html
+++ b/server/web/list_projects/content.html
@@ -22,7 +22,7 @@
 
         <tr class="project-info" id="prj-{{ $.Site.Fmt.Uid .Uid }}">
             <td>
-                <a href="{{$.Site.Url.ViewProject .Name }}" class="project-name project-link">{{ .Name }}</a>
+                <a href="{{$.Site.Url.ViewProject .Name }}" class="project-name project-link">{{ .Title }}</a>
             </td>
             <td class="dataset-count">{{ .DatasetCount }}</td>
             <td class="job-count">{{ .JobCount }}</td>
