--- a/server/web/view_project/content.html
+++ b/server/web/view_project/content.html
@@ -41,7 +41,7 @@
     </td>
     <td class="data-format text-lowercase">{{.Item.DataFormat}}</td>
     <td>
-    <span class="zip-size">{{ $.Site.Fmt.BytesDecimal .Item.StorageBytes}}</span>
+    <span class="zip-size" title="{{.Item.StorageBytes}}">{{ $.Site.Fmt.BytesDecimal .Item.StorageBytes}}</span>
     {{if .Item.LocationId}}<span class="text-muted">at <span class="location-id">{{.Item.LocationId}}</span></span>{{end}}
     </td>
     <td class="update-timestamp">{{if .Item.UpdateTimestamp}}{{$.Site.Fmt.Timestamp .Item.UpdateTimestamp}}{{end}}</td>
