--- a/server/web/view_project/content.html
+++ b/server/web/view_project/content.html
@@ -30,12 +30,9 @@
 <tbody>
 
 {{range .Datasets}}
-
-
-
     <tr class="dataset-info" id="ds-{{ $.Site.Fmt.Uid .Item.Uid }}">
     <td>
-        <a href="{{$.Site.Url.ViewDataset .Item.ProjectName .Item.Name}}" class="dataset-link">{{.Item.Title}}</a>
+        <a href="{{$.Site.Url.ViewDataset .Item.ProjectName .Item.Name}}" class="dataset-link">{{.Item.Caption}}</a>
         {{if .IsStale}} <span class="stale-status badge badge-warning">stale</span>{{end}}
 
     </td>
