--- a/server/web/layout.html
+++ b/server/web/layout.html
@@ -86,7 +86,7 @@
                     <li class="nav-item">
                         <a class="nav-link disabled text-muted" href="#">
                             <span data-feather="users"></span>
-                            Reports <span class="badge badge-pill badge-secondary align-middle report-count">{{.Stats.ReportCount}}</span>
+                            Services <span class="badge badge-pill badge-secondary align-middle report-count">{{.Stats.ServiceCount}}</span>
                         </a>
                     </li>
                     <li class="nav-item">
