--- a/server/web/view_dashboard/content.html
+++ b/server/web/view_dashboard/content.html
@@ -1,4 +1,4 @@
-{{- /*gotype: mlp/catalog/web/list_projects.Model*/ -}}
+{{- /*gotype: mlp/catalog/web/view_dashboard.Model*/ -}}
 {{ define "content" }}
 <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3">
     <h1 class="h2">Projects</h1>
@@ -9,11 +9,8 @@
     <table class="table table-sm table-striped table-bordered">
         <thead>
         <tr>
-            <th>Name</th>
-            <th>Datasets</th>
-            <th>Jobs</th>
-            <th>Systems</th>
-            <th>Storage</th>
+            <th>Id</th>
+            <th>Updated</th>
         </tr>
         </thead>
         <tbody>
@@ -21,16 +18,19 @@
         {{range .Projects}}
 
 
-        <tr class="project-info" id="prj-{{ $.Site.Fmt.Uid .Uid }}">
-            <td>
-                <a href="{{$.Site.Url.ViewProject .Name }}" class="project-name project-link">{{ .Title }}</a>
+        <tr class="project-info" id="prj-{{ .ProjectId }}">
+            <td colspan="2" class="table-primary">
+                <strong>Project:</strong> {{ .ProjectId }}
             </td>
-            <td class="dataset-count">{{ .DatasetCount }}</td>
-            <td class="job-count">{{ .JobCount }}</td>
-            <td class="job-count">{{ .SystemCount }}</td>
-
-            <td><span class="storage-size" title="{{.StorageBytes}}">{{ $.Site.Fmt.BytesDecimal .StorageBytes }}</span></td>
         </tr>
+
+            {{range .Datasets}}
+                <tr>
+                    <td><a href="{{$.Site.Url.ViewDataset .ProjectId .DatasetId}}">{{.Caption}}</a></td>
+                    <td>{{$.Site.Fmt.Timestamp .UpdateTimestamp}}</td>
+                </tr>
+            {{end}}
+
         {{end}}
         </tbody>
     </table>
